@@ -33,7 +33,6 @@
 
 namespace Brainworxx\Krexx\Framework;
 
-use Brainworxx\Krexx\Analysis\Variables;
 use Brainworxx\Krexx\View\Help;
 use Brainworxx\Krexx\View\SkinRender;
 
@@ -77,7 +76,8 @@ class Toolbox
             // When we are not going to create a logfile, we send it to the browser.
             // Check for ajax.
             if (isset($_SERVER['HTTP_X_REQUESTED_WITH']) &&
-                strtolower($_SERVER['HTTP_X_REQUESTED_WITH']) === 'xmlhttprequest') {
+                strtolower($_SERVER['HTTP_X_REQUESTED_WITH']) === 'xmlhttprequest'
+            ) {
                 // Appending stuff after a ajax request will most likely
                 // cause a js error. But there are moments when you actually
                 // want to do this.
@@ -229,17 +229,21 @@ class Toolbox
                     }
                     // Add it to the result.
                     $realLineNo = $currentLineNo + 1;
+
+                    // Escape it.
+                    $contentArray[$currentLineNo] = self::encodeString($contentArray[$currentLineNo], true);
+
                     if ($currentLineNo == $lineNo) {
                         $result .= SkinRender::renderBacktraceSourceLine(
                             'highlight',
                             $realLineNo,
-                            Variables::encodeString($contentArray[$currentLineNo], true)
+                            $contentArray[$currentLineNo]
                         );
                     } else {
                         $result .= SkinRender::renderBacktraceSourceLine(
                             'source',
                             $realLineNo,
-                            Variables::encodeString($contentArray[$currentLineNo], true)
+                            $contentArray[$currentLineNo]
                         );
                     }
                 } else {
@@ -368,6 +372,111 @@ class Toolbox
 
             $result = htmlspecialchars($protocol . '://' . $host . $s['REQUEST_URI'], ENT_QUOTES, 'UTF-8');
         }
+        return $result;
+    }
+
+    /**
+     * Sanitizes a string, by completely encoding it.
+     *
+     * Should work with mixed encoding.
+     *
+     * @param string $data
+     *   The data which needs to be sanitized.
+     * @param bool $code
+     *   Do we need to format the string as code?
+     *
+     * @return string
+     *   The encoded string.
+     */
+    public static function encodeString($data, $code = false)
+    {
+        /**
+         * List of all charsets that can be safely encoded via htmlentities().
+         *
+         * @var array
+         */
+        $charsetList = array(
+            'UTF-8',
+            'ISO-8859-1',
+            'ISO-8859-5',
+            'ISO-8859-15',
+            'cp866',
+            'cp1251',
+            'Windows-1251',
+            'cp1252',
+            'Windows-1252',
+            'KOI8-R',
+            'koi8r',
+            'BIG5',
+            'GB2312',
+            'Shift_JIS',
+            'SJIS',
+            'SJIS-win',
+            'cp932',
+            'EUC-JP',
+            'EUCJP',
+            'eucJP-win',
+        );
+
+        $result = '';
+        // Try to encode it.
+        $encoding = mb_detect_encoding($data, $charsetList);
+        if ($encoding !== false) {
+            set_error_handler(function () {
+                /* do nothing. */
+            });
+            $result = @htmlentities($data, null, $encoding);
+            restore_error_handler();
+            // We are also encoding @, because we need them for our chunks.
+            $result = str_replace('@', '&#64;', $result);
+            // We ara also encoding the {, because we use it as markers for the skins.
+            $result = str_replace('{', '&#123;', $result);
+        }
+
+        // Check if encoding was successful.
+        if (strlen($result) === 0 && strlen($data) !== 0) {
+            // Something went wrong with the encoding, we need to
+            // completely encode this one to be able to display it at all!
+            $data = @mb_convert_encoding($data, 'UTF-32', mb_detect_encoding($data));
+
+            if ($code) {
+                // We are displaying sourcecode, so we need
+                // to do some formatting.
+                $sortingCallback = function ($n) {
+                    if ($n == 9) {
+                        // Replace TAB with two spaces, it's better readable that way.
+                        $result = '&nbsp;&nbsp;';
+                    } else {
+                        $result = "&#$n;";
+                    }
+                    return $result;
+                };
+            } else {
+                // No formatting.
+                $sortingCallback = function ($n) {
+                    return "&#$n;";
+                };
+            }
+
+            // Here we have another SPOF. When the string is large enough
+            // we will run out of memory!
+            // @see https://sourceforge.net/p/krexx/bugs/21/
+            // We will *NOT* return the unescaped string. So we must check if it
+            // is small enough for the unpack().
+            // 100 kb should be save enough.
+            if (strlen($data) < 102400) {
+                $result = implode("", array_map($sortingCallback, unpack("N*", $data)));
+            } else {
+                $result = Help::getHelp('stringTooLarge');
+            }
+        } else {
+            if ($code) {
+                // Replace all tabs with 2 spaces to make sourcecode better
+                // readable.
+                $result = str_replace(chr(9), '&nbsp;&nbsp;', $result);
+            }
+        }
+
         return $result;
     }
 }
