@@ -2,8 +2,11 @@
 - Change: Removed the code generation for the SplObjectStorage.
   Generating code for the SplObjectStorage is right now too
   complicated.
-- Cleanup: Introduced real models, to get the values to the view.
+- Cleanup: Introduced "models", to get the values to the view.
 - Cleanup: Removed all closures and use real classes.
+- Cleanup: Moved (nearly) all string escaping to the "model".
+  Exception to this is the read sourcecode, which we are handling
+  a little bit differently.
 
 1.4.2
 - Added analysis metadata to the file output.
